--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,19 @@
 </head>
 <body>
 
+  <style>
+    /* html {
+      background-image: url("img/index-mobile.png");
+      background-position: center top;
+      background-repeat: no-repeat;
+
+    }
+
+    body {
+      opacity: 0.5;
+    } */
+  </style>
+
   <header class="header">
     <div class="container">
       <nav class="main-nav">
@@ -99,7 +112,7 @@
   </header>
 
   <main>
-    <section class="main-banner">
+    <section class="main-banner section">
       <div class="section-xxl">
         <div class="main-banner__wrapper">
           <div class="container">
@@ -145,7 +158,7 @@
       </div>
     </section>
 
-    <section class="advantages">
+    <section class="advantages section section--pb mb-lg-6">
       <div class="container">
         <div class="advantages__wrapper row">
           <div class="col-lg-6 ms-lg-auto">
@@ -174,7 +187,7 @@
 
     </section>
 
-    <section class="calculator">
+    <section class="calculator section section--pb-m section--pb">
       <div class="container">
         <h2 class="calculator__heading heading-primary">Калькулятор</h2>
         <div class="row calculator__wrapper">
@@ -322,7 +335,7 @@
 
     </section>
 
-    <section class="work-scheme">
+    <section class="work-scheme section section--pb-m section--pb mb-lg-6">
       <div class="container">
         <h2 class="work-scheme__heading heading-primary">Простобокс – у&nbsp;нас&nbsp;все просто</h2>
         <ul class="work-scheme__list row">
@@ -359,7 +372,7 @@
       </div>
     </section>
 
-    <section class="promo-slider">
+    <section class="promo-slider section section--pb mb-6 mb-lg-5">
       <div class="container">
         <div class="promo-slider__main-wrapper">
           <div class="promo-slider__container swiper-container swiper-promo-slider">
@@ -375,7 +388,7 @@
                 </div>
               </div>
 
-              <div class="promo-slider__item swiper-slide">
+              <!-- <div class="promo-slider__item swiper-slide">
                 <div class="promo-slider__img">
                   <img src="img/slides/ptostobot.png" alt="iPhone">
                 </div>
@@ -383,7 +396,7 @@
                   <h3 class="promo-slider__title">ПростоБот от Простобокс</h3>
                   <p class="promo-slider__desc">Телеграм Бот Простобокса – это возможность делать большую часть операций в личном кабинете не заходя на сайт, быть в курсе актуальных распродаж и скидок, а также общаться с поддержкой при необходимости.</p>
                 </div>
-              </div>
+              </div> -->
 
             </div>
           </div>
@@ -404,28 +417,29 @@
       </div>
     </section>
 
-    <section class="features">
+    <section class="features section section--pb mb-lg-6">
       <div class="container">
-        <h2 class="features__heading heading-primary">Самое важное о&nbsp;Простобоксе</h2>
-        <p class="features__heading-2 heading-secondary"><span class="blue">Двойная выгода</span> – платите&nbsp;меньше<br> не только за товары, но&nbsp;и&nbsp;за&nbsp;доставку</p>
-        <ul class="features__list">
-          <li class="features__item">Склад в <span class="blue">100% безналоговом</span> Делавэре</li>
-          <li class="features__item"><span class="blue">Бесплатный приём</span> входящих посылок на&nbsp;складе</li>
-          <li class="features__item"><span class="blue">Пополнение</span> счёта от&nbsp;$10 <span class="blue">без комиссии</span> эквайринга</li>
-          <li class="features__item"><span class="blue">Бесплатное объединение</span> входящих посылок</li>
-          <li class="features__item"><span class="blue">Бесплатная</span> стандартная <span class="blue">упаковка</span> посылок</li>
-          <li class="features__item"><span class="blue">Склад без соседей</span>: посылки точно привезут нам</li>
-          <li class="features__item"><span class="blue">24/7&nbsp;работает служба&nbsp;поддержки</span> Простобокса</li>
-          <li class="features__item"><span class="blue">45 дней</span> входящие посылки <span class="blue">хранятся бесплатно</span></li>
-          <li class="features__item"><span class="blue">Выплачиваем $2</span> за каждую посылку, отправленную по реферальной программе</li>
-        </ul>
+        <div class="features__wrapper">
+          <h2 class="features__heading heading-primary">Самое важное о&nbsp;Простобоксе</h2>
+          <p class="features__heading-2 heading-secondary"><span class="blue">Двойная выгода</span> – платите&nbsp;меньше<br> не только за товары, но&nbsp;и&nbsp;за&nbsp;доставку</p>
+          <ul class="features__list">
+            <li class="features__item">Склад в <span class="blue">100% безналоговом</span> Делавэре</li>
+            <li class="features__item"><span class="blue">Бесплатный приём</span> входящих посылок на&nbsp;складе</li>
+            <li class="features__item"><span class="blue">Пополнение</span> счёта от&nbsp;$10 <span class="blue">без комиссии</span> эквайринга</li>
+            <li class="features__item"><span class="blue">Бесплатное объединение</span> входящих посылок</li>
+            <li class="features__item"><span class="blue">Бесплатная</span> стандартная <span class="blue">упаковка</span> посылок</li>
+            <li class="features__item"><span class="blue">Склад без соседей</span>: посылки точно привезут нам</li>
+            <li class="features__item"><span class="blue">24/7&nbsp;работает служба&nbsp;поддержки</span> Простобокса</li>
+            <li class="features__item"><span class="blue">45 дней</span> входящие посылки <span class="blue">хранятся бесплатно</span></li>
+            <li class="features__item"><span class="blue">Выплачиваем $2</span> за каждую посылку, отправленную по реферальной программе</li>
+          </ul>
 
-        <a class="button" href="#">Зарегистрироваться</a>
+          <a class="button" href="#">Зарегистрироваться</a>
+        </div>
       </div>
-
     </section>
 
-    <section class="reviews">
+    <section class="reviews section section--pb-m section--pb mb-lg-6">
 
       <div class="container reviews__container">
         <h2 class="reviews__heading heading-primary">Отзывы</h2>
@@ -554,7 +568,7 @@
 
     </section>
 
-    <section class="additional">
+    <section class="additional section section--pb mb-5">
       <div class="additional__wrapper section-xxl">
         <div class="additional__content">
           <div class="container">
@@ -587,7 +601,7 @@
       </div>
     </section>
 
-    <section class="service">
+    <section class="service section section--pb-m section--pb mb-lg-6">
       <div class="container">
         <div class="service__wrapper row">
           <h2 class="service__heading heading-primary">Посмотрите как мы работаем</h2>
@@ -613,7 +627,7 @@
       </div>
     </section>
 
-    <section class="recommendation">
+    <section class="recommendation section section--pb">
       <div class="container">
         <div class="recommendation__content">
           <h2 class="recommendation__heading heading-primary">Подскажем где и&nbsp;что покупать</h2>
@@ -623,7 +637,7 @@
       </div>
     </section>
 
-    <section class="subscribe">
+    <section class="subscribe section section--pb-m section--p mb-lg-5">
       <div class="container">
         <div class="subscribe__wrapper row">
           <div class="col-lg-6 ms-lg-auto">
