--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -4,8 +4,76 @@
 
 {% block main %}
 
-  <main>
+<main>
+  <section class="services section">
+    <div class="container">
+      <h1 class="services__heading heading-primary">Услуги Простобокса</h1>
+      <ul class="services__list row">
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Персональная <br> ячейка</h3>
+            <p class="services__text">на складе в 100% безналоговом штате Делавэр для хранения ваших американких
+              покупок
+            </p>
+            <p class="services__price">Бесплатно</p>
+          </div>
+        </li>
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Приёмка</h3>
+            <p class="services__text">с помощью современного конвейера всех посылок на складе по будням с 8 до 17</p>
+            <p class="services__price">Бесплатно</p>
+          </div>
+        </li>
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Объединение</h3>
+            <p class="services__text">нескольких входящих посылок в одну, чтобы сэкономить на доставке</p>
+            <p class="services__price">Бесплатно</p>
+          </div>
+        </li>
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Удаление обувных коробок</h3>
+            <p class="services__text">чтобы посылка весила меньше и стоила дешевле</p>
+            <p class="services__price">Бесплатно</p>
+          </div>
+        </li>
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Стандартная упаковка</h3>
+            <p class="services__text">в стандартные коробки, переупаковка, добавление товаров из нашего магазина</p>
+            <p class="services__price">Бесплатно</p>
+          </div>
+        </li>
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Хранение входящих посылок 45 дней</h3>
+            <p class="services__text">чтобы вы могли не беспокоиться и отправлять товары в комфортное для вас время
+            </p>
+            <p class="services__price">Бесплатно</p>
+          </div>
+        </li>
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Пополнение баланса от $10</h3>
+            <p class="services__text">мы возьмем на себя комиссии эквайринга, а вы сэкономите до 4 процентов</p>
+            <p class="services__price">Без комиссии</p>
+          </div>
+        </li>
+        <li class="services__item col-lg-3 col-md-6">
+          <div class="services__wrapper">
+            <h3 class="services__title heading-tertiary">Поддержка 24/7</h3>
+            <p class="services__text">через тикеты, чат и соцсети, чтобы помочь вам в любую минуту</p>
+            <p class="services__price">Бесплатно</p>
+          </div>
+        </li>
 
-  </main>
+      </ul>
+    </div>
+  </section>
+
+
+</main>
 
 {% endblock %}
