Добавляет ссылку ЛК

--- a/src/pages/auth.html
+++ b/src/pages/auth.html
@@ -1,107 +1,9 @@
-<!DOCTYPE html>
-<html class="page" lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layout.html" %}
 
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/style.min.css">
+{% set siteName = "Prostobox.com" %}
+{% set isAuthenticated = true %}
 
-  <title>Prostobox.com</title>
-</head>
-<body>
-
-    <header class="header">
-    <div class="container">
-      <nav class="main-nav">
-        <a class="logo main-nav__logo" href="#">
-          <img src="img/logo.svg" alt="Логотип Prostobox.com" width="205" height="30">
-        </a>
-        <button class="main-nav__toggle nav-toggle">
-          <span class="nav-toggle__line"></span>
-          <span class="visually-hidden">Меню</span>
-        </button>
-        <div class="main-nav__mobile-wrapper">
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list">
-              <li class="main-nav__item"><a href="#">Как покупать в США</a></li>
-              <li class="main-nav__item"><a href="#">Калькулятор</a></li>
-              <li class="main-nav__item"><a href="#">Скидки в США</a></li>
-              <li class="main-nav__item"><a href="#">ЛикБез</a></li>
-              <li class="main-nav__item"><a href="#">Блог</a></li>
-            </ul>
-            <ul class="main-nav__list main-nav__list--mobile">
-              <li class="main-nav__item"><a href="#">Обработка персональных данных</a></li>
-              <li class="main-nav__item"><a href="#">Условия использования сервиса</a></li>
-            </ul>
-          </div>
-          <div class="main-nav__social">
-            <span class="main-nav__social-title">Мы в соцсетях:</span>
-            <ul class="main-nav__social-list social">
-              <li class="social__item social__item--white">
-                <a href="#">
-                  <svg class="social__icon-vk" width="30" height="30" viewBox="0 0 22 22">
-                    <use xlink:href="img/sprite.svg#vk"></use>
-                  </svg>
-                  <span class="visually-hidden">вкантакте</span>
-                </a>
-              </li>
-              <li class="social__item social__item--white">
-                <a href="#">
-                  <svg class="social__icon-instagram" width="30" height="30" viewBox="0 0 30 30">
-                    <use xlink:href="img/sprite.svg#instagram"></use>
-                  </svg>
-                  <span class="visually-hidden">инстограм</span>
-                </a>
-              </li>
-              <li class="social__item social__item--white">
-                <a href="#">
-                  <svg class="social__icon-telegram" width="30" height="30" viewBox="0 0 30 30">
-                    <use xlink:href="img/sprite.svg#telegram"></use>
-                  </svg>
-                  <span class="visually-hidden">телеграм</span>
-                </a>
-              </li>
-              <li class="social__item social__item--white">
-                <a href="#">
-                  <svg class="social__icon-facebook" width="30" height="30" viewBox="0 0 30 30">
-                    <use xlink:href="img/sprite.svg#facebook"></use>
-                  </svg>
-                  <span class="visually-hidden">фейсбук</span>
-                </a>
-              </li>
-              <li class="social__item social__item--white">
-                <a href="#">
-                  <svg class="social__icon-tviter" width="30" height="30" viewBox="0 0 30 30">
-                    <use xlink:href="img/sprite.svg#tviter"></use>
-                  </svg>
-                  <span class="visually-hidden">твитер</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="main-nav__user user-nav">
-
-          
-            <a class="user-nav__link user-nav__login" href="#">Вход
-              <svg class="user-nav__link-icon user-nav__login-icon" width="31" height="30">
-                <use href="img/sprite.svg#login"></use>
-              </svg>
-              <svg class="user-nav__login-icon-mobile" width="20" height="20">
-                <use href="img/sprite.svg#login-mobile"></use>
-              </svg>
-            </a>
-          
-          </div>
-        </div>
-
-      </nav>
-    </div>
-  </header>
-
-  
+{% block main %}
 
   <main>
     <section class="main-banner section">
@@ -180,191 +82,7 @@
     </section>
 
     <section class="section section--pb-m section--pb">
-      <div class="calculator">
-  <div class="container">
-    <h2 class="calculator__heading heading-primary">Калькулятор</h2>
-    <div class="row calculator__wrapper">
-      <div class="col-xl-6 d-flex flex-wrap">
-        <form class="calculator__form form" action="#">
-          <div class="calculator__field">
-            <label class="form__label">Страна доставки*</label>
-            <select class="form__select form__input" id="country" required autocomplete="off">
-              <option value="" disabled selected>Страна</option>
-              <option value="RU">Россия</option>
-            </select>
-          </div>
-          <div class="calculator__field">
-              <label class="form__label">Город доставки*</label>
-              <input class="form__input" type="text" id="city" value="" placeholder="Город">
-          </div>
-          <div class="calculator__field">
-              <label class="form__label">Индекс</label>
-              <input class="form__input" id="zip" type="text">
-          </div>
-
-          <div class="calculator__field calculator__field--weight">
-            <label class="form__label" for="package-weight">Вес посылки*</label>
-            <div class="calculator__weight">
-              <input class="form__input weight-input" id="package-weight" type="text" value="0.5">
-            </div>
-            <div class="calculator__unit">
-              <select class="form__select form__select--p-sm form__input">
-                <option value="kg">Кг</option>
-                <option value="lb">фунты</option>
-              </select>
-            </div>
-          </div>
-
-          <div class="calculator__field">
-            <label class="form__label">Цена товара </label>
-            <input class="form__input" id="price" type="text">
-          </div>
-
-          <div class="calculator__field calculator__field--submit">
-            <button class="calculator__submit button">Рассчитать доставку</button>
-          </div>
-
-        </form>
-
-      </div>
-      <div class="col-xl-6">
-        <div class="calculator__features-wrapper">
-          <ul class="calculator__features list">
-            <li>Приём посылок - <b class="blue">$0</b></li>
-            <li>Консолидация - <b class="blue">$0</b></li>
-            <li>Упаковка стандартная - <b class="blue">$0</b></li>
-            <li>Комиссия за пополнение баланса - <b class="blue">$0</b>
-              <button class="calculator__features-qm question-mark" data-tippy-content="Внесите примерную стоимость товаров, чтобы узнать стоимость страховки">
-                <svg width="20" height="20" viewBox="0 0 20 20">
-                  <use xlink:href="img/sprite.svg#question-mark"></use>
-                </svg>
-              </button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="calculator__tariffs tariffs">
-
-      <h3 class="tariffs__heading">Подходящие тарифы:</h3>
-
-      <div class="tariffs__wrapper swiper-container swiper-tariffs">
-        <ul class="tariffs__list swiper-wrapper">
-          <li class="tariffs__item tariff tariff--active tariff--econom swiper-slide">
-            <div class="tariff__wrapper">
-              <span class="tariff__label">Тариф</span>
-              <h3 class="tariff__title">Для экономных</h3>
-              <span class="tariff__time">5 - 10 дней</span>
-              <b class="tariff__price">$3,99</b>
-              <ul class="tariff__features">
-                <li class="tariff__features-item">
-                  <div class="tariff__features-title-wrapper">
-                    <span class="tariff__features-title">Страховка от утери</span>
-                  </div>
-                  <b class="tariff__features-price">...</b>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="tariffs__item tariff tariff--one swiper-slide">
-            <span class="tariff__label">Тариф</span>
-            <h3 class="tariff__title">По одной</h3>
-            <span class="tariff__time">7 - 14 дней</span>
-            <b class="tariff__price">$9,99</b>
-            <ul class="tariff__features">
-              <li class="tariff__features-item">
-                <div class="tariff__features-title-wrapper">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <button class="question-mark" data-tippy-content="Внесите примерную стоимость товаров, чтобы узнать стоимость страховки">
-                    <svg width="20" height="20" viewBox="0 0 20 20">
-                      <use xlink:href="img/sprite.svg#question-mark"></use>
-                    </svg>
-                  </button>
-                </div>
-                <b class="tariff__features-price">$5</b>
-              </li>
-            </ul>
-          </li>
-          <li class="tariffs__item tariff tariff--combination swiper-slide">
-            <span class="tariff__label">Тариф</span>
-            <h3 class="tariff__title">С объединением</h3>
-            <span class="tariff__time">7 - 14 дней</span>
-            <b class="tariff__price">$14,99</b>
-            <ul class="tariff__features">
-              <li class="tariff__features-item">
-                <div class="tariff__features-title-wrapper">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <button class="question-mark" data-tippy-content="Внесите примерную стоимость товаров, чтобы узнать стоимость страховки">
-                    <svg width="20" height="20" viewBox="0 0 20 20">
-                      <use xlink:href="img/sprite.svg#question-mark"></use>
-                    </svg>
-                  </button>
-                </div>
-                <b class="tariff__features-price">$5</b>
-              </li>
-              <li class="tariff__features-item">
-                <div class="tariff__features-title-wrapper">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <button class="question-mark" data-tippy-content="Внесите примерную стоимость товаров, чтобы узнать стоимость страховки">
-                    <svg width="20" height="20" viewBox="0 0 20 20">
-                      <use xlink:href="img/sprite.svg#question-mark"></use>
-                    </svg>
-                  </button>
-                </div>
-                <b class="tariff__features-price">$5</b>
-              </li>
-            </ul>
-          </li>
-          <li class="tariffs__item tariff tariff--post swiper-slide">
-            <span class="tariff__label">Тариф</span>
-            <h3 class="tariff__title">Через почту</h3>
-            <span class="tariff__time">20 - 30 дней</span>
-            <b class="tariff__price">$22,99</b>
-            <ul class="tariff__features">
-              <li class="tariff__features-item">
-                <div class="tariff__features-title-wrapper">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                </div>
-                <b class="tariff__features-price">$5</b>
-              </li>
-            </ul>
-          </li>
-          <li class="tariffs__item tariff tariff--parcel swiper-slide">
-            <span class="tariff__label">Тариф</span>
-            <h3 class="tariff__title">Для бандеролек</h3>
-            <span class="tariff__time">20 - 30 дней</span>
-            <b class="tariff__price">$15,99</b>
-            <ul class="tariff__features">
-              <li class="tariff__features-item">
-                <div class="tariff__features-title-wrapper">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <button class="question-mark" data-tippy-content="Внесите примерную стоимость товаров, чтобы узнать стоимость страховки">
-                    <svg width="20" height="20" viewBox="0 0 20 20">
-                      <use xlink:href="img/sprite.svg#question-mark"></use>
-                    </svg>
-                  </button>
-                </div>
-                <b class="tariff__features-price">$5</b>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <div class="tariffs__slider-nav">
-          <ul class="slider-nav">
-            <li class="slider-nav__item">
-              <button class="slider-nav__btn slider-nav__btn--prev"></button>
-            </li>
-            <li class="slider-nav__item">
-              <button class="slider-nav__btn slider-nav__btn--next"></button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+      {% include "../templates/components/calculator.html" %}
     </section>
 
     <section class="work-scheme section section--pb-m section--pb mb-lg-6">
@@ -725,100 +443,4 @@
     </section>
 
   </main>
-
-    <footer class="footer">
-    <div class="section-xxl">
-      <div class="footer__navigation">
-        <div class="container">
-          <div class="footer-nav">
-            <div class="footer__logo">
-              <a class="footer__logo-img">
-                <img src="img/logo-footer.svg" alt="Логотип Prostobox.com" width="141" height="34">
-              </a>
-            </div>
-            <ul class="footer-nav__list">
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Как покупать в США</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Калькулятор</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Скидки в США</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Партнерская программа</a></li>
-            </ul>
-            <ul class="footer-nav__list">
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">ЛикБез</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Блог</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Подобрать размер</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Контакты</a></li>
-            </ul>
-            <ul class="footer-nav__list">
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Обработка персональных данных</a></li>
-              <li class="footer-nav__item"><a class="footer-nav__link" href="#">Условия использования сервиса</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="footer__bottom container">
-      <p class="footer__copyright">©prostobox.com 2021</p>
-      <div class="footer__social">
-        <p class="footer__social-text">Мы в соцсетях:</p>
-        <ul class="footer__social-list social">
-          <li class="social__item">
-            <a href="#">
-              <svg class="social__icon-vk" width="30" height="30" viewBox="0 0 22 22">
-                <use xlink:href="img/sprite.svg#vk"></use>
-              </svg>
-              <span class="visually-hidden">вкантакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="#">
-              <svg class="social__icon-instagram" width="30" height="30" viewBox="0 0 30 30">
-                <use xlink:href="img/sprite.svg#instagram"></use>
-              </svg>
-              <span class="visually-hidden">инстаграм</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="#">
-              <svg class="social__icon-telegram" width="30" height="30" viewBox="0 0 30 30">
-                <use xlink:href="img/sprite.svg#telegram"></use>
-              </svg>
-              <span class="visually-hidden">телеграм</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="#">
-              <svg class="social__icon-facebook" width="30" height="30" viewBox="0 0 30 30">
-                <use xlink:href="img/sprite.svg#facebook"></use>
-              </svg>
-              <span class="visually-hidden">фейсбук</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="#">
-              <svg class="social__icon-twitter" width="30" height="30" viewBox="0 0 30 30">
-                <use xlink:href="img/sprite.svg#twitter"></use>
-              </svg>
-              <span class="visually-hidden">твитер</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </footer>
-
-
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="https://unpkg.com/@popperjs/core@2"></script>
-  <script src="https://unpkg.com/tippy.js@6"></script>
-  <script src="js/script.min.js"></script>
-
-  <script>
-    tippy('.question-mark', {
-      trigger: 'click',
-      hideOnClick: true,
-    });
-  </script>
-</body>
-</html>
+{% endblock %}
