--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -6,13 +6,14 @@
 
 <style>
   /* html {
-    background-image: url("img/services-mobile.png");
+    background-image: url("img/services.png");
     background-position: center top;
     background-repeat: no-repeat;
   }
   body {
     opacity: 0.5;
   } */
+
 </style>
 
 <main>
@@ -20,7 +21,7 @@
   <section class="services section">
     <div class="section-xxl">
       <div class="services__wrapper">
-      <div class="container">
+        <div class="container">
           <ul class="breadcrumbs">
             <li class="breadcrumbs__item">Главная</li>
             <li class="breadcrumbs__item breadcrumbs__item--active">Услуги</li>
@@ -31,7 +32,8 @@
               <li class="services__item col-lg-3 col-md-6">
                 <div class="services__item-wrapper">
                   <h3 class="services__title heading-tertiary">Персональная <br> ячейка</h3>
-                  <p class="services__text">на складе в 100% безналоговом штате Делавэр для хранения ваших американких покупок
+                  <p class="services__text">на складе в 100% безналоговом штате Делавэр для хранения ваших американких
+                    покупок
                   </p>
                   <p class="services__price">Бесплатно</p>
                 </div>
@@ -39,7 +41,8 @@
               <li class="services__item col-lg-3 col-md-6">
                 <div class="services__item-wrapper">
                   <h3 class="services__title heading-tertiary">Приёмка</h3>
-                  <p class="services__text">с помощью современного конвейера всех посылок на&nbsp;складе&nbsp;по будням<br> с 8 до 17
+                  <p class="services__text">с помощью современного конвейера всех посылок на&nbsp;складе&nbsp;по
+                    будням<br> с 8 до 17
                   </p>
                   <p class="services__price">Бесплатно</p>
                 </div>
@@ -47,13 +50,15 @@
               <li class="services__item col-lg-3 col-md-6">
                 <div class="services__item-wrapper">
                   <h3 class="services__title heading-tertiary">Объединение</h3>
-                  <p class="services__text">нескольких входящих посылок в&nbsp;одну, чтобы сэкономить на&nbsp;доставке</p>
+                  <p class="services__text">нескольких входящих посылок в&nbsp;одну, чтобы сэкономить на&nbsp;доставке
+                  </p>
                   <p class="services__price">Бесплатно</p>
                 </div>
               </li>
               <li class="services__item col-lg-3 col-md-6">
                 <div class="services__item-wrapper">
-                  <h3 class="services__title heading-tertiary">Удаление<br class="d-none d-lg-inline"> обувных коробок</h3>
+                  <h3 class="services__title heading-tertiary">Удаление<br class="d-none d-lg-inline"> обувных коробок
+                  </h3>
                   <p class="services__text">чтобы посылка весила меньше и&nbsp;стоила дешевле</p>
                   <p class="services__price">Бесплатно</p>
                 </div>
@@ -61,14 +66,16 @@
               <li class="services__item col-lg-3 col-md-6">
                 <div class="services__item-wrapper">
                   <h3 class="services__title heading-tertiary">Стандартная<br> упаковка</h3>
-                  <p class="services__text">в стандартные коробки, переупаковка, добавление товаров из нашего магазина</p>
+                  <p class="services__text">в стандартные коробки, переупаковка, добавление товаров из нашего магазина
+                  </p>
                   <p class="services__price">Бесплатно</p>
                 </div>
               </li>
               <li class="services__item col-lg-3 col-md-6">
                 <div class="services__item-wrapper">
                   <h3 class="services__title heading-tertiary">Хранение входящих посылок 45 дней</h3>
-                  <p class="services__text">чтобы вы могли<br> не беспокоиться<br> и отправлять товары в&nbsp;комфортное для вас время
+                  <p class="services__text">чтобы вы могли<br> не беспокоиться<br> и отправлять товары в&nbsp;комфортное
+                    для вас время
                   </p>
                   <p class="services__price">Бесплатно</p>
                 </div>
@@ -76,7 +83,8 @@
               <li class="services__item col-lg-3 col-md-6">
                 <div class="services__item-wrapper">
                   <h3 class="services__title heading-tertiary">Пополнение баланса от $10</h3>
-                  <p class="services__text">мы возьмем на себя комиссии эквайринга, а вы сэкономите до&nbsp;4 процентов</p>
+                  <p class="services__text">мы возьмем на себя комиссии эквайринга, а вы сэкономите до&nbsp;4 процентов
+                  </p>
                   <p class="services__price">Без комиссии</p>
                 </div>
               </li>
